@@ -1,24 +1,21 @@
-#!/bin/bash
-
-#©keithhedger Sun 14 Jul 13:17:49 BST 2024 kdhedger68713@gmail.com
-
-findTag ()
-{
-	SKIP=1
-	while [[ $SKIP -eq 1 ]]
-	do
-		read
-		if $(echo $REPLY|grep -q '</Token>') ;then
-			echo "NOTAG"
-			return
-		fi
-
-		if $(echo $REPLY|grep -q "$1") ;then
-			SKIP=0
-			echo $REPLY
-		fi
-	done	
-}
+#
+#©K. D. Hedger. Mon 29 Jul 12:06:32 BST 2024 keithdhedger@gmail.com
+#
+#This file (makedocset) is part of KKEditQT.
+#
+#KKEditQT is free software: you can redistribute it and/or modify
+#it under the terms of the GNU General Public License as published by
+#the Free Software Foundation, either version 3 of the License, or
+#(at your option) any later version.
+#
+#KKEditQT is distributed in the hope that it will be useful,
+#but WITHOUT ANY WARRANTY; without even the implied warranty of
+#MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#GNU General Public License for more details.
+#
+#You should have received a copy of the GNU General Public License
+#along with KKEditQT.  If not, see <http://www.gnu.org/licenses/>.
+#
 
 ICONPATH=${ICONPATH:-"./LFSTux.png"}
 SOURCEHTML=${SOURCEHTML:-"./mydocset/html"};
@@ -54,40 +51,14 @@ END_SQL
 	echo "Building DB ..."
 	while read
 		do
-			if $(echo $REPLY|grep -q '<Token>') ;then
-				unset NAME TYPE FILEPATH
-
-				x=$(findTag "<Name>")
-				if [[ $NAME = "NOTAG" ]];then
-					x=$(findTag "</Token>")
-					continue
-				fi
-				NAME=$(echo ${x}|sed -n 's@.*>\(.*\)<.*@\1@p')
-
-				x=$(findTag "<Type>")
-				if [[ $NAME = "NOTAG" ]];then
-					x=$(findTag "</Token>")
-					continue
-				fi
-				TYPE=$(echo ${x}|sed -n 's@.*>\(.*\)<.*@\1@p')
-
-				x=$(findTag "<Path>")
-				if [[ $NAME = "NOTAG" ]];then
-					x=$(findTag "</Token>")
-					continue
-				fi
-				FILEPATH=$(echo ${x}|sed -n 's@.*>\(.*\)<.*@\1@p')
-
-				x=$(findTag "<Anchor>")
-				if [[ ! "$x" = "NOTAG" ]];then
-					ANCHOR=$(echo ${x}|sed -n 's@.*>\(.*\)<.*@\1@p')
-					FILEPATH="${FILEPATH}#${ANCHOR}"
-				fi
-
-				echo "Adding $NAME ..."
-				sqlite3 docSet.dsidx  "insert into searchindex (name,type,path) values ('$NAME','$TYPE','$FILEPATH');"
-				x=$(findTag "</Token>")
+			unset Name Type Path Anchor
+			eval "$REPLY"
+			FILEPATH=${Path}
+			if [[ ! "X${Anchor}" = "X" ]];then
+				FILEPATH="${FILEPATH}#${Anchor}"
 			fi
-		done<Tokens.xml
+			echo "Adding $Name ..."
+			sqlite3 docSet.dsidx  "insert into searchindex (name,type,path) values ('$Name','$Type','$FILEPATH');"
+		done< <(kkeditqttagreader Tokens.xml Token Name Type Path Anchor)
 	rm Tokens.xml
 popd &>/dev/null
